# graduation-project

Back-end/: pyproject.toml
Back-end/CMS/: db.sqlite3
Back-end/CMS/CMS/: asgi.py  settings.py  urls.py  wsgi.py
Back-end/CMS/appointments/: models.py  serializers.py  urls.py  views.py
Back-end/CMS/appointments/migrations/: 0001_initial.py  0002_alter_appointment_doctor_alter_appointment_patient.py  0003_approvement.py  0004_feedback.py
Back-end/CMS/authentication/: emails.py  models.py  serializers.py  urls.py  views.py
Back-end/CMS/doctor/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
Back-end/CMS/doctor/migrations/: 0001_initial.py  0002_doctor_image.py
Back-end/CMS/patient/: admin.py  models.py  serializers.py  urls.py  views.py
Back-end/CMS/patient/migrations/: 0001_initial.py  0002_rename_field_name_patient_appointment_time.py
Back-end/CMS/pharmacy/: models.py  serializers.py  urls.py  views.py
Back-end/CMS/pharmacy/migrations/: 0001_initial.py
Back-end/CMS/subscriptions/: admin.py  models.py  urls.py  views.py
Back-end/CMS/subscriptions/migrations/: 0001_initial.py
Back-end/CMS/templates/: activationsuccess.html  cancel.html  landing.html  success.html
Back-end/CMS/users/: admin.py  models.py  serializers.py  urls.py  views.py
Back-end/CMS/users/migrations/: 0001_initial.py  0002_rename_name_customuser_doctor_name.py  0003_customuser_role.py  0004_customuser_is_verified_customuser_otp.py  0005_feedback.py  0006_question.py  0007_buy.py  0008_test.py  0009_rename_test_test_prescription.py  (+2 more)
forntend/: .firebaserc  (+3 more)
(+88 files in other folders)
