[tool.poetry]
name = "basic-django"
version = "0.1.0"
description = ""
authors = ["Hossam Hassan Mohamed Hassan <hossam.hassan@bld.ai>"]
readme = "README.md"
packages = [{include = "basic_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
